# bitrix_tools_cli

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bitrix_tools_cli.spec  meson.build  meson.options  shell.nix
.cache/clangd/index/: application.cpp.8817DFD9E7E66E2E.idx  application.h.A4423043CCC6EA63.idx  command.cpp.C1416E7B967A423E.idx  command.h.8D36509AF38B058D.idx  command_factory.cpp.E026F4A93DD8D931.idx  command_factory.h.C7D95E5A1D50F342.idx  command_manager.cpp.90A9EB38CCC9B5E9.idx  command_manager.h.19839277D36496F2.idx  config.cpp.252DBE3B8FF50DC7.idx  config.h.BBF6BBED1D03D488.idx  init_cmd.cpp.1FF051926392A8F3.idx  init_cmd.h.53E02E4E9081FA95.idx  main.cpp.C90D8E35F64CBABC.idx
.github/workflows/: build.yml
.lsp/.cache/: db.transit.json
config/: config.json  variables.in
data/: bitrix-tools.json  bitrix-tools.json.j2
data/templates/: default-config.json.template  default-config.template
headers/: application.h  command.h  command_factory.h  command_manager.h  config.h  json_parser.h  template.h  work_location.h
headers/commands/: create_default_config_cmd.h  generate_component_cmd.h  init_cmd.h
include/: application.h  command_manager.h  config.h  config_property_mapper.h  config_to_template_properties_mapper.h  json_parser.h  json_reader.h  settings.h  template.h  template_property_value.h  variables.h.in
include/commands/: init_cmd.h
resources/config/: config.json
src/: application.cpp  command.cpp  command_factory.cpp  command_manager.cpp  config.cpp  config_property_mapper.cpp  config_to_template_properties_mapper.cpp  json_parser.cpp  json_reader.cpp  main.cpp  template.cpp  template_property_value.cpp  work_location.cpp
src/commands/: create_default_config_cmd.cpp  generate_component_cmd.cpp  init_cmd.cpp
test/: config_test.cpp  init_command_test.cpp  json_test.cpp  run_test.cpp  template_test.cpp
test/test_data/: json.json  template.php.j2
test/tools/: tools.cpp  tools.h
